@@ -15,6 +15,12 @@ METHODS
 
     Constructor.
 
+    *       "debug"
+
+            Debug mode.
+
+            Default value is 0.
+
     *       "pod_file"
 
             POD or Perl module file to process.
